# blog_project

./: .env.pub  .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
blog_cli/: Cargo.toml
blog_cli/src/: command.rs  main.rs  security.rs
blog_client/: Cargo.toml  build.rs
blog_client/src/: error.rs  grpc_client.rs  http_client.rs  lib.rs
blog_server/: Cargo.toml  build.rs
blog_server/migrations/: 20251215172304_create_users.sql  20251215172314_create_posts.sql
blog_server/proto/: blog.proto
blog_server/src/: main.rs
blog_server/src/application/: auth_service.rs  blog_service.rs
blog_server/src/data/: mod.rs  posr_repository.rs  user_repository.rs
blog_server/src/domain/: auth.rs  error.rs  mod.rs  post.rs
blog_server/src/infrastructure/: config.rs  database.rs  logging.rs  mod.rs  security.rs
blog_server/src/presentation/: auth.rs  dto.rs  grpc_service.rs  middleware.rs  mod.rs
blog_server/src/presentation/handlers/: mod.rs  protect.rs  public.rs
blog_wasm/: Cargo.toml  Dioxus.toml  README.md
blog_wasm/assets/: main.css
blog_wasm/src/: dto.rs  main.rs
blog_wasm/src/components/: auth.rs  header.rs  mod.rs  post.rs
blog_wasm/src/infrastructure/: api.rs  local_storege.rs  mod.rs
