[package]
name = "blog-client"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = {workspace = true}
chrono = {workspace = true}
serde = {workspace = true}

prost = {workspace = true}
thiserror = {workspace = true}
tonic = {workspace = true}
tonic-prost = {workspace = true}
tracing = {workspace = true}
tokio = {workspace = true}
serde_json = {workspace = true}
futures-util = {workspace = true}
reqwest = {workspace = true} 

[build-dependencies]
tonic-prost-build.workspace = true
