[package]
name = "blog-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12"
actix-cors = "0.7"
actix-service = "2"
async-trait = {workspace = true}
argon2 = "0.5"
chrono = {workspace = true}
serde = {workspace = true}
sqlx = { version = "0.8", features = ["postgres", "runtime-tokio", "chrono", "uuid"] }
prost = {workspace = true}
thiserror = {workspace = true}
tonic = {workspace = true}
tonic-prost = {workspace = true}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}
tokio = {workspace = true}
jsonwebtoken = { version = "10", features = ["aws_lc_rs"] }
serde_json = {workspace = true}
uuid = {workspace = true}
dotenvy = {workspace = true}
anyhow = {workspace = true}
futures-util = {workspace = true}
serde_with = { workspace = true}

[build-dependencies]
tonic-prost-build.workspace = true
