[package]
name = "blog-wasm"
version = "0.1.0"
authors = ["volk <you@example.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.7", features = ["router", "web", "logger"] }
anyhow = {workspace = true}
reqwest = {workspace = true} 
chrono = {workspace = true}
serde = {workspace = true}
serde_json = {workspace = true}
serde_with = { workspace = true}
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlElement", "Storage"] }
uuid = {workspace = true, features = ["js", "v4"]}

[features]
default = ["web"]
web = ["dioxus/web"]

